# techlang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json  main  main.ll  main.tec  run_tests.sh  std.c  syntax.md
docs/: Design-Philosophy.md  LANGUAGE.md
examples/: arrays.expected  arrays.tec  casting.expected  casting.tec  enums.expected  enums.tec  fibonacci.tec  hello.tec  pointers.tec  strings.expected  strings.tec  structs.expected  structs.tec
examples/file_editing/: files.expected  files.tec
examples/gpu/: arrays.ptx  arrays.ptx_runtime.c  arrays.tec  arrays.vtec  main  main.tec  matrix.ptx  matrix.vtec  sumReduce.ptx  sumReduce.ptx_runtime.c  sumReduce.tec  sumReduce.vtec
examples/imports/: main.expected  main.tec  math.tec
src/: CodeGen.cpp  CodeGen.h  ast.h  ast_printer.cpp  import_rezolver.cpp  import_rezolver.h  ir_generator.cpp  ir_generator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.h  token.h  vectec_main.cpp
src/analysis/: semantic_analyzer.cpp  semantic_analyzer.h
src/backend/: gpu_generator.cpp  gpu_generator.h  gpu_runtime_generator.cpp  gpu_runtime_generator.h  ir_generator.cpp  ir_generator.h
src/debug/: ast_printer.cpp  ast_printer.h  error.h
src/frontend/: import_resolver.cpp  import_resolver.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
stdlib/: std.c  std.tec
tec_files/: main  main.ll  main.tec  math.tec  std.tec
